--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -133,12 +133,6 @@
   @apply h-[200%];
 }
 
-/* .header-blur::after {
-  content: " ";
-  top: calc(50% - 4px);
-  @apply block w-full absolute h-1 bg-primary/10 backdrop-blur-lg;
-} */
-
 .page-width {
   @apply w-full md:max-w-3xl lg:max-w-5xl mx-auto px-4 box-border;
 }
@@ -156,7 +150,7 @@
 }
 
 .banner .inner .set img {
-  @apply object-fill max-w-40 mx-8 box-border;
+  @apply object-fill max-w-40 mx-8 box-border h-auto;
 }
 
 .banner:hover .inner .set {
@@ -170,4 +164,54 @@
   100% {
     transform: translateX(-100%);
   }
+}
+
+.nav-submenu::before {
+  @apply block absolute h-full w-full box-border border border-primary/5  -m-2 rounded backdrop-blur-2xl;
+  
+  transition: all;
+  z-index: -1;
+  content: " ";
+  background-image: radial-gradient(
+    ellipse 24rem 12rem var(--bg-origin),
+    #325EF601,
+    transparent
+  ),
+  radial-gradient(
+    ellipse 36rem 12rem var(--bg-origin),
+    #33c1ff01,
+    transparent
+  ),
+  radial-gradient(
+    ellipse 100% 30% at 50% 100%,
+    #325EF601,
+    #325EF601,
+    transparent
+  ),
+  radial-gradient(
+    ellipse 100vw 12rem var(--bg-origin),
+    #33c1ff03,
+    #325EF602,
+    transparent
+  ),
+  radial-gradient(
+    ellipse 4rem 0.5rem var(--bg-origin),
+    #33c1ff,
+    transparent
+  );
+}
+
+.nav-solutions {
+  @apply grid w-full gap-2;
+  
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-template-rows: 20px repeat(8, minmax(0, 1fr));
+  align-items: end;
+  
+  @variant lg {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-template-rows: 20px repeat(4, minmax(0, 1fr));
+  }
+  
+  grid-auto-flow: column;
 }
